--- a/UnderTimeScheduleTelegramBot/requirements.txt
+++ b/UnderTimeScheduleTelegramBot/requirements.txt
@@ -1,2 +1,9 @@
-aiogram==2.11.2
+async-timeout==3.0.1
 asyncio==3.4.3
+attrs==20.3.0
+certifi==2020.12.5
+chardet==3.0.4
+multidict==5.1.0
+pipfile==0.0.2
+toml==0.10.2
+typing-extensions==3.7.4.3
